cmake_minimum_required(VERSION 3.9)
project(CSC173_Project_1_new)

set(CMAKE_CXX_STANDARD 11)

add_executable(CSC173_Project_1_new
        BitSet.c
        BitSet.h
        dfa.c
        dfa.h
        IntHashSet.c
        IntHashSet.h
        LinkedList.c
        LinkedList.h
        nfa.c
        nfa.h
        Set.h
        strdup.c
        strdup.h)
